@@ -98,7 +98,7 @@ static struct t_event_mpit2prv event_mpit2prv[NUM_MPI_PRV_ELEMENTS] = {
 	{-1, MPITYPE_GROUP, MPI_GROUP_UNION_VAL, FALSE},      /*  41 */
 	{-1, MPITYPE_GROUP, MPI_GROUP_COMPARE_VAL, FALSE},    /*  42 */
 	{MPI_INTERCOMM_CREATE_EV, MPITYPE_COMM, MPI_INTERCOMM_CREATE_VAL, FALSE},  /*  43 */
-	{MPI_INTERCOMM_CREATE_VAL, MPITYPE_COMM, MPI_INTERCOMM_MERGE_VAL, FALSE},   /*  44 */
+	{MPI_INTERCOMM_MERGE_EV, MPITYPE_COMM, MPI_INTERCOMM_MERGE_VAL, FALSE},   /*  44 */
 	{-1, MPITYPE_OTHER, MPI_KEYVAL_FREE_VAL, FALSE},      /*  45 */
 	{-1, MPITYPE_OTHER, MPI_KEYVAL_CREATE_VAL, FALSE},    /*  46 */
 	{-1, MPITYPE_OTHER, MPI_ABORT_VAL, FALSE},    /*  47 */
